# weaverVM

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
roms/: digits.ch8
src/: main.cpp
src/chip8/: chip8.cpp  chip8.hpp
src/core/: vm_interface.hpp
src/display/: display.cpp  display.hpp
src/input/: input.cpp  input.hpp
